Bug 497841 - Pressing the Next Frame key, while paused, to try to view the last frame of a video instead skips ahead to playing the next video
Summary: Pressing the Next Frame key, while paused, to try to view the last frame of a...
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL: https://github.com/mpv-player/mpv/iss...
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-12-23 19:44 UTC by Fernando Marcelino Muniz
Modified: 2025-11-20 16:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Marcelino Muniz 2024-12-23 19:44:39 UTC
It's difficult to take a screenshot of the last frame of a paused video because it causes the video to replay.

I found a way of working around this issue by dragging the progress bar to the last frame.
Comment 1 John Kizer 2025-01-02 06:40:53 UTC
Hi - can you please specify:

* The steps you used to reproduce this issue?
* The version of Haruna on which you observed this?

I'm able to see the last frame of a video as you are by dragging the bar to the end while paused, so I'm unclear what steps are being followed to trigger the video restarting.

Thanks,
Comment 2 Fernando Marcelino Muniz 2025-01-02 06:45:11 UTC
(In reply to John Kizer from comment #1)
> Hi - can you please specify:
> 
> * The steps you used to reproduce this issue?
> * The version of Haruna on which you observed this?
> 
> I'm able to see the last frame of a video as you are by dragging the bar to
> the end while paused, so I'm unclear what steps are being followed to
> trigger the video restarting.
> 
> Thanks,

It repeats the video if you get to the last frame by pressing the "Next Frame" key, in my case it's the ">." key.
Comment 3 John Kizer 2025-01-02 06:58:00 UTC
Thanks, I can reproduce on Fedora KDE 41, same Haruna version.
Comment 4 george fb 2025-08-16 01:24:02 UTC
Git commit 36d5b2798077da7a9d5752473ec43e6286e91629 by George Florea Bănuș.
Committed on 16/08/2025 at 01:11.
Pushed by georgefb into branch 'master'.

mpvitem: enable KeepOpen when playback is paused

prevents loading the next file while using frame step to go to the last frame
when holding the frame step action key the playback state is
considered to be playing, resulting in the next file being loaded

M  +7    -3    src/mpv/mpvitem.cpp

https://invent.kde.org/multimedia/haruna/-/commit/36d5b2798077da7a9d5752473ec43e6286e91629
Comment 5 Fernando Marcelino Muniz 2025-09-28 00:40:11 UTC
This issue is reproducible in 1.4.0 now.
Comment 6 Fernando Marcelino Muniz 2025-10-18 19:02:24 UTC
Videos don't loop if I press >. when I'm already on the last frame, but it does loop if, for example, I go backwards frame, then go back to the last frame, it will loop.
Comment 7 george fb 2025-10-20 14:36:12 UTC
That's an mpv quirk, I don't know how to work around it nor do I want to spend more time on it.
Comment 8 Fernando Marcelino Muniz 2025-11-20 16:03:28 UTC
(In reply to george fb from comment #7)
> That's an mpv quirk, I don't know how to work around it nor do I want to
> spend more time on it.

Apparently there is a way:
https://github.com/mpv-player/mpv/issues/16942#issuecomment-3558306108
Comment 9 Fernando Marcelino Muniz 2025-11-20 16:09:45 UTC
Nevermind, they missunderstood the issue.