mpvitem: enable KeepOpen when playback is paused

prevents loading the next file while using frame step to go to the last frame
when holding the frame step action key the playback state is
considered to be playing, resulting in the next file being loaded

BUG: 497841